add oziel et al 2020

--- a/_bibliography/webpage_refs.bib
+++ b/_bibliography/webpage_refs.bib
@@ -20,6 +20,7 @@
   pages = {1665--1682},
   issn = {2169-9275},
   doi = {10.1002/2016JC012431},
+  abstract = {A one-dimensional model is employed to reproduce the observed time evolution of hydrographic properties in the upper water column during winter, between 26 January and 11 March 2015, in a region north of Svalbard in the Nansen Basin of the Arctic Ocean. From an observed initial state, vertical diffusion equations for temperature and salinity give the hydrographic conditions at a later stage. Observations of microstructure are used to synthesize profiles of vertical diffusivity, K, representative of varying wind forcing conditions. The ice-ocean heat and salt fluxes at the ice-ocean interface are implemented as external source terms, estimated from the salt and enthalpy budgets, using friction velocity from the Rossby similarity drag relation, and the ice core temperature profiles. We are able to reproduce the temporal evolution of hydrography satisfactorily for two pairs of measured profiles, suggesting that the vertical processes dominated the observed changes. Sensitivity tests reveal a significant dependence on K. Variation in other variables, such as the temperature gradient of the sea ice, the fraction of heat going to ice melt, and the turbulent exchange coefficient for heat, are relatively less important. The increase in salinity as a result of freezing and brine release is approximately 10\%, significantly less than that due to entrainment (90\%) from beneath the mixed layer. Entrainment was elevated during episodic storm events, leading to melting. The results highlight the contribution of storms to mixing in the upper Arctic Ocean and its impact on ice melt and mixed-layer salt and nutrient budgets.},
   journal = {Journal of Geophysical Research-Oceans},
   keywords = {1-D model,and mixing processes,Arctic and Antarctic oceanography,Arctic Ocean,diffusion,dissipation,entrainment,heat-flux,internal waves,marginal ice-zone,mixed layer,mixed-layer,mixing,nitrate,parameterization,sea ice,Sea ice,sea-ice,Turbulence,Upper ocean and mixed layer processes,variability,yermak plateau},
   language = {English},
@@ -37,6 +38,7 @@
   doi = {10.1038/s41598-019-45574-5},
   url = {https://www.nature.com/articles/s41598-019-45574-5},
   urldate = {2019-08-12},
+  abstract = {A large retreat of sea-ice in the `stormy' Atlantic Sector of the Arctic Ocean has become evident through a series of record minima for the winter maximum sea-ice extent since 2015. Results from the Norwegian young sea ICE (N-ICE2015) expedition, a five-month-long (Jan-Jun) drifting ice station in first and second year pack-ice north of Svalbard, showcase how sea-ice in this region is frequently affected by passing winter storms. Here we synthesise the interdisciplinary N-ICE2015 dataset, including independent observations of the atmosphere, snow, sea-ice, ocean, and ecosystem. We build upon recent results and illustrate the different mechanisms through which winter storms impact the coupled Arctic sea-ice system. These short-lived and episodic synoptic-scale events transport pulses of heat and moisture into the Arctic, which temporarily reduce radiative cooling and henceforth ice growth. Cumulative snowfall from each sequential storm deepens the snow pack and insulates the sea-ice, further inhibiting ice growth throughout the remaining winter season. Strong winds fracture the ice cover, enhance ocean-ice-atmosphere heat fluxes, and make the ice more susceptible to lateral melt. In conclusion, the legacy of Arctic winter storms for sea-ice and the ice-associated ecosystem in the Atlantic Sector lasts far beyond their short lifespan.},
   journal = {Scientific Reports},
   language = {en},
   number = {1}
@@ -67,7 +69,26 @@
   doi = {10.1525/elementa.372},
   url = {http://www.elementascience.org/article/10.1525/elementa.372/},
   urldate = {2019-08-29},
+  abstract = {Article: Environmental factors influencing the seasonal dynamics of spring algal blooms in and beneath sea ice in western Baffin Bay},
   journal = {Elem Sci Anth},
+  language = {en},
+  number = {1}
+}
+
+@article{oziel2020faster,
+  title = {Faster {{Atlantic}} Currents Drive Poleward Expansion of Temperate Phytoplankton in the {{Arctic Ocean}}},
+  author = {Oziel, L. and Baudena, A. and Ardyna, M. and Massicotte, P. and Randelhoff, A. and Sall{\'e}e, J.-B. and Ingvaldsen, R. B. and Devred, E. and Babin, M.},
+  year = {2020},
+  month = apr,
+  volume = {11},
+  pages = {1--8},
+  publisher = {{Nature Publishing Group}},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-020-15485-5},
+  url = {https://www.nature.com/articles/s41467-020-15485-5},
+  urldate = {2020-04-06},
+  abstract = {The North Atlantic current has been suspected to trigger intrusions of temperate marine species in the Arctic. Here, Oziel and colleagues reveal the link between the poleward intrusion of the temperate coccolithophore Emiliania huxleyi and the North Atlantic current, showing evidence for bio-advection as an important mechanism.},
+  journal = {Nature Communications},
   language = {en},
   number = {1}
 }
@@ -137,6 +158,7 @@
   pages = {5282--5295},
   issn = {2169-9275},
   doi = {10.1002/2016JC011779},
+  abstract = {This study compiles colocated oceanic observations of high-resolution vertical profiles of nitrate concentration and turbulent microstructure around the Svalbard shelf slope, covering both the permanently ice-free Fram Strait and the pack ice north of Svalbard. The authors present an overview over the seasonal evolution of the distribution of nitrate and its relation to upper ocean stratification. The average upward turbulent diffusive nitrate flux across the seasonal nitracline during the Arctic summer season is derived, with average values of 0.3 and 0.7 mmol m(-2) d(-1) for stations with and without ice cover, respectively. The increase under ice-free conditions is attributed to different patterns of stratification under sea ice versus open water. The nitrate flux obtained from microstructure measurements lacked a seasonal signal. However, bottle incubations indicate that August nitrate uptake was reduced by more than an order of magnitude relative to the May values. It remains inconclusive whether the new production was limited by an unidentified factor other than NO3- supply in late summer, or the uptake was underestimated by the incubation method.},
   journal = {Journal of Geophysical Research-Oceans},
   keywords = {and mixing processes,Arctic,diffusion,dissipation,marine,nitrate,nitrogen,Nitrogen cycling,Nutrients and nutrient cycling,phytoplankton,Phytoplankton,sea,turbulence,Turbulence,Upper ocean and mixed layer processes,variability,vertical fluxes,water},
   language = {English},
@@ -151,6 +173,7 @@
   pages = {835--853},
   doi = {10.1175/JPO-D-16-0200.1},
   url = {https://doi.org/10.1175/JPO-D-16-0200.1},
+  abstract = {AbstractEvery summer, intense sea ice melt around the margins of the Arctic pack ice leads to a stratified surface layer, potentially without a traditional surface mixed layer. The associated strengthening of near-surface stratification has important consequences for the redistribution of near-inertial energy, ice{\^a}ocean heat fluxes, and vertical replenishment of nutrients required for biological growth. The authors describe the vertical structure of meltwater layers and quantify their seasonal evolution and their effect on turbulent mixing in the oceanic boundary layer by analyzing more than 450 vertical profiles of velocity microstructure in the seasonal ice zone north of Svalbard. The vertical structure of the density profiles can be summarized by an equivalent mixed layer depth hBD, which scales with the depth of the seasonal stratification. As the season progresses and melt rates increase, hBD shoals following a robust pattern, implying stronger vertical stratification, weaker vertical eddy diffusivity, and reduced vertical extent of the mixing layer, which is bounded by hBD. Through most of the seasonal pycnocline, the vertical eddy diffusivity scales inversely with buoyancy frequency (K{\"I} {\^a} N{\^a}1). The presence of mobile sea ice alters the magnitude and vertical structure of turbulent mixing primarily through stronger and shallower stratification, and thus vertical eddy diffusivity is greatly reduced under sea ice. This study uses these results to develop a quantitative model of surface layer turbulent mixing during Arctic summer and discuss the impacts of a changing sea ice cover.},
   bdsk-url-2 = {http://dx.doi.org/10.1175/JPO-D-16-0200.1},
   eprint = {https://doi.org/10.1175/JPO-D-16-0200.1},
   journal = {Journal of Physical Oceanography},
@@ -166,6 +189,7 @@
   address = {{Troms{\o}, Norway}},
   url = {http://hdl.handle.net/10037/10948},
   urldate = {2018-06-25},
+  abstract = {Upward mixing of remineralized nutrients is essential for photosynthesis in the upper ocean. Weak vertical mixing, which restricts nutrient supply, and sea ice, which leads to low light levels, conspire to severely inhibit marine primary productivity in the Arctic Ocean. However, little has been known about their relative contributions. No large-scale quantitative estimates of the vertical nutrient supply had previously been presented, which has impeded an understanding of its role in shaping the ecology and carbon cycle of the Arctic Ocean.
 
 In order to estimate the vertical flux of nitrate into the surface layer in contrasting hydrographic and dynamic regimes, profiles of turbulent microstructure and nitrate concentrations were measured as part of a number of cruises and ice camps in the area extending from eastern Fram Strait into the Nansen Basin. These have been supplemented with obervations of the seasonal nutrient cycle at a mooring in the same area, and a reanalysis of available data on nitrate concentrations and turbulent mixing in other parts of the central Arctic Ocean.
 
@@ -183,6 +207,7 @@ Hydrography was found to be the biggest driver of variability in nitrate fluxes.
   doi = {10.3389/fmars.2018.00224},
   url = {https://www.frontiersin.org/articles/10.3389/fmars.2018.00224/full?\&utm_source=Email_to_authors_\&utm_medium=Email\&utm_content=T1_11.5e1_author\&utm_campaign=Email_publication\&field=\&journalName=Frontiers_in_Marine_Science\&id=377832},
   urldate = {2018-06-29},
+  abstract = {Eastern Fram Strait and the shelf slope region north of Svalbard is dominated by the advection of warm, salty and nutrient-rich Atlantic Water (AW). This oceanic heat contributes to keeping the area relatively free of ice. The last years have seen a dramatic decrease in regional sea ice extent, which is expected to drive large increases in pelagic primary production and thereby changes in marine ecology and nutrient cycling. In a concerted effort, we conducted five cruises to the area in winter, spring, summer and fall of 2014, in order to understand the physical and biogeochemical controls of carbon cycling, for the first time from a year-round point of view. We document (1) the offshore location of the wintertime front between salty AW and fresher Surface Water in the ocean surface, (2) thermal convection of Atlantic Water over the shelf slope, likely enhancing vertical {\~n}nutrient fluxes, and (3) the importance of ice melt derived upper ocean stratification for the spring bloom timing. Our findings strongly confirm the hypothesis that this ``Atlantification'', as it has been called, of the shelf slope area north of Svalbard resulting from the advection of AW alleviates both nutrient and light limitations at the same time, leading to increased pelagic primary productivity in this region.},
   journal = {Frontiers in Marine Science},
   keywords = {Arctic Ocean,Atlantic water,Carbon,Convection,Hydrography,Nutrients,Shelf slope},
   language = {English}
@@ -208,6 +233,7 @@ Hydrography was found to be the biggest driver of variability in nitrate fluxes.
   doi = {10.5281/zenodo.2653855},
   url = {https://github.com/poplarShift/ice-edge},
   urldate = {2019-05-30},
+  abstract = {This is a first release of the code (and the data and figures it produced) used by Randelhoff et al. for "The evolution of light and vertical mixing across a phytoplankton ice-edge bloom", Elementa: Science of the Anthropocene (2019).},
   keywords = {Arctic,ice edge,light,phytoplankton bloom,turbulent mixing}
 }
 
@@ -222,6 +248,7 @@ Hydrography was found to be the biggest driver of variability in nitrate fluxes.
   doi = {10.1525/elementa.357},
   url = {http://www.elementascience.org/article/10.1525/elementa.357/},
   urldate = {2019-05-30},
+  abstract = {Article: The evolution of light and vertical mixing across a phytoplankton ice-edge bloom},
   journal = {Elem Sci Anth},
   language = {en},
   number = {1}
@@ -237,6 +264,7 @@ Hydrography was found to be the biggest driver of variability in nitrate fluxes.
   doi = {10.3389/fmars.2020.00150},
   url = {https://www.frontiersin.org/articles/10.3389/fmars.2020.00150/full?\&utm_source=Email_to_authors_\&utm_medium=Email\&utm_content=T1_11.5e1_author\&utm_campaign=Email_publication\&field=\&journalName=Frontiers_in_Marine_Science\&id=516949},
   urldate = {2020-03-31},
+  abstract = {Arctic Ocean primary productivity is limited by light and inorganic nutrients. With sea ice cover declining in recent decades, nitrate limitation has been speculated to become more prominent. Although much has been learned about nitrate supply from general patterns of ocean circulation and water column stability, a quantitative analysis requires dedicated turbulence measurements that have only started to accumulate in the last dozen years. Here we present new observations of the turbulent vertical nitrate flux in the Laptev Sea, Baffin Bay, and Young Sound (North-East Greenland), supplementing a compilation of 13 published estimates throughout the Arctic Ocean. Combining all flux estimates with a Pan-Arctic database of in situ measurements of nitrate concentration and density, we found the annual nitrate inventory to be largely determined by the strength of stratification and by bathymetry. Nitrate fluxes explained the observed regional patterns and magnitudes of both new primary production and particle export on annual scales. We argue that with few regional exceptions, vertical turbulent nitrate fluxes can be a reliable proxy of Arctic primary production accessible through autonomous and large-scale measurements. They may also provide a framework to assess nutrient limitation scenarios based on clear energetic and mass budget constraints resulting from turbulent mixing and freshwater flows.},
   journal = {Frontiers in Marine Science},
   keywords = {Arctic,Climate Change,flux,nitrate,primary production,sea ice,Turbulence},
   language = {English}
