add phyto winter growth paper

--- a/_bibliography/webpage_refs.bib
+++ b/_bibliography/webpage_refs.bib
@@ -1,13 +1,13 @@
 
 @article{assmy2017leads,
   title = {Leads in {{Arctic}} Pack Ice Enable Early Phytoplankton Blooms below Snow-Covered Sea Ice},
-  author = {Assmy, Philipp and {Fern{\'a}ndez-M{\'e}ndez}, Mar and Duarte, Pedro and Meyer, Amelie and Randelhoff, Achim and Mundy, Christopher J. and Olsen, Lasse M. and Kauko, Hanna M. and Bailey, Allison and Chierici, Melissa and Cohen, Lana and Doulgeris, Anthony P. and Ehn, Jens K. and Fransson, Agneta and Gerland, Sebastian and Hop, Haakon and Hudson, Stephen R. and Hughes, Nick and Itkin, Polona and Johnsen, Geir and King, Jennifer A. and Koch, Boris P. and Koenig, Zoe and Kwasniewski, Slawomir and Laney, Samuel R. and Nicolaus, Marcel and Pavlov, Alexey K. and Polashenski, Christopher M. and Provost, Christine and R{\"o}sel, Anja and Sandbu, Marthe and Spreen, Gunnar and Smedsrud, Lars H. and Sundfjord, Arild and Taskjelle, Torbj{\~A}\c{}rn and Tatarek, Agnieszka and Wiktor, Jozef and Wagner, Penelope M. and Wold, Anette and Steen, Harald and Granskog, Mats A.},
+  author = {Assmy, Philipp and {Fern{\'a}ndez-M{\'e}ndez}, Mar and Duarte, Pedro and Meyer, Amelie and Randelhoff, Achim and Mundy, Christopher J. and Olsen, Lasse M. and Kauko, Hanna M. and Bailey, Allison and Chierici, Melissa and Cohen, Lana and Doulgeris, Anthony P. and Ehn, Jens K. and Fransson, Agneta and Gerland, Sebastian and Hop, Haakon and Hudson, Stephen R. and Hughes, Nick and Itkin, Polona and Johnsen, Geir and King, Jennifer A. and Koch, Boris P. and Koenig, Zoe and Kwasniewski, Slawomir and Laney, Samuel R. and Nicolaus, Marcel and Pavlov, Alexey K. and Polashenski, Christopher M. and Provost, Christine and R{\"o}sel, Anja and Sandbu, Marthe and Spreen, Gunnar and Smedsrud, Lars H. and Sundfjord, Arild and Taskjelle, Torbj\{{\textbackslash}o\}rn and Tatarek, Agnieszka and Wiktor, Jozef and Wagner, Penelope M. and Wold, Anette and Steen, Harald and Granskog, Mats A.},
   year = {2017},
   month = jan,
   volume = {7},
+  pages = {40850},
   doi = {dx.doi.org/10.1038/srep40850},
-  journal = {Scientific Reports},
-  number = {40850}
+  journal = {Scientific Reports}
 }
 
 @article{fer2017onedimensional,
@@ -21,6 +21,7 @@
   issn = {2169-9275},
   doi = {10.1002/2016JC012431},
   abstract = {A one-dimensional model is employed to reproduce the observed time evolution of hydrographic properties in the upper water column during winter, between 26 January and 11 March 2015, in a region north of Svalbard in the Nansen Basin of the Arctic Ocean. From an observed initial state, vertical diffusion equations for temperature and salinity give the hydrographic conditions at a later stage. Observations of microstructure are used to synthesize profiles of vertical diffusivity, K, representative of varying wind forcing conditions. The ice-ocean heat and salt fluxes at the ice-ocean interface are implemented as external source terms, estimated from the salt and enthalpy budgets, using friction velocity from the Rossby similarity drag relation, and the ice core temperature profiles. We are able to reproduce the temporal evolution of hydrography satisfactorily for two pairs of measured profiles, suggesting that the vertical processes dominated the observed changes. Sensitivity tests reveal a significant dependence on K. Variation in other variables, such as the temperature gradient of the sea ice, the fraction of heat going to ice melt, and the turbulent exchange coefficient for heat, are relatively less important. The increase in salinity as a result of freezing and brine release is approximately 10\%, significantly less than that due to entrainment (90\%) from beneath the mixed layer. Entrainment was elevated during episodic storm events, leading to melting. The results highlight the contribution of storms to mixing in the upper Arctic Ocean and its impact on ice melt and mixed-layer salt and nutrient budgets.},
+  annotation = {WOS:000400678900004},
   journal = {Journal of Geophysical Research-Oceans},
   keywords = {1-D model,and mixing processes,Arctic and Antarctic oceanography,Arctic Ocean,diffusion,dissipation,entrainment,heat-flux,internal waves,marginal ice-zone,mixed layer,mixed-layer,mixing,nitrate,parameterization,sea ice,Sea ice,sea-ice,Turbulence,Upper ocean and mixed layer processes,variability,yermak plateau},
   language = {English},
@@ -159,6 +160,7 @@
   issn = {2169-9275},
   doi = {10.1002/2016JC011779},
   abstract = {This study compiles colocated oceanic observations of high-resolution vertical profiles of nitrate concentration and turbulent microstructure around the Svalbard shelf slope, covering both the permanently ice-free Fram Strait and the pack ice north of Svalbard. The authors present an overview over the seasonal evolution of the distribution of nitrate and its relation to upper ocean stratification. The average upward turbulent diffusive nitrate flux across the seasonal nitracline during the Arctic summer season is derived, with average values of 0.3 and 0.7 mmol m(-2) d(-1) for stations with and without ice cover, respectively. The increase under ice-free conditions is attributed to different patterns of stratification under sea ice versus open water. The nitrate flux obtained from microstructure measurements lacked a seasonal signal. However, bottle incubations indicate that August nitrate uptake was reduced by more than an order of magnitude relative to the May values. It remains inconclusive whether the new production was limited by an unidentified factor other than NO3- supply in late summer, or the uptake was underestimated by the incubation method.},
+  annotation = {WOS:000383468500049},
   journal = {Journal of Geophysical Research-Oceans},
   keywords = {and mixing processes,Arctic,diffusion,dissipation,marine,nitrate,nitrogen,Nitrogen cycling,Nutrients and nutrient cycling,phytoplankton,Phytoplankton,sea,turbulence,Turbulence,Upper ocean and mixed layer processes,variability,vertical fluxes,water},
   language = {English},
@@ -173,7 +175,7 @@
   pages = {835--853},
   doi = {10.1175/JPO-D-16-0200.1},
   url = {https://doi.org/10.1175/JPO-D-16-0200.1},
-  abstract = {AbstractEvery summer, intense sea ice melt around the margins of the Arctic pack ice leads to a stratified surface layer, potentially without a traditional surface mixed layer. The associated strengthening of near-surface stratification has important consequences for the redistribution of near-inertial energy, ice{\^a}ocean heat fluxes, and vertical replenishment of nutrients required for biological growth. The authors describe the vertical structure of meltwater layers and quantify their seasonal evolution and their effect on turbulent mixing in the oceanic boundary layer by analyzing more than 450 vertical profiles of velocity microstructure in the seasonal ice zone north of Svalbard. The vertical structure of the density profiles can be summarized by an equivalent mixed layer depth hBD, which scales with the depth of the seasonal stratification. As the season progresses and melt rates increase, hBD shoals following a robust pattern, implying stronger vertical stratification, weaker vertical eddy diffusivity, and reduced vertical extent of the mixing layer, which is bounded by hBD. Through most of the seasonal pycnocline, the vertical eddy diffusivity scales inversely with buoyancy frequency (K{\"I} {\^a} N{\^a}1). The presence of mobile sea ice alters the magnitude and vertical structure of turbulent mixing primarily through stronger and shallower stratification, and thus vertical eddy diffusivity is greatly reduced under sea ice. This study uses these results to develop a quantitative model of surface layer turbulent mixing during Arctic summer and discuss the impacts of a changing sea ice cover.},
+  abstract = {AbstractEvery summer, intense sea ice melt around the margins of the Arctic pack ice leads to a stratified surface layer, potentially without a traditional surface mixed layer. The associated strengthening of near-surface stratification has important consequences for the redistribution of near-inertial energy, ice\^aocean heat fluxes, and vertical replenishment of nutrients required for biological growth. The authors describe the vertical structure of meltwater layers and quantify their seasonal evolution and their effect on turbulent mixing in the oceanic boundary layer by analyzing more than 450 vertical profiles of velocity microstructure in the seasonal ice zone north of Svalbard. The vertical structure of the density profiles can be summarized by an equivalent mixed layer depth hBD, which scales with the depth of the seasonal stratification. As the season progresses and melt rates increase, hBD shoals following a robust pattern, implying stronger vertical stratification, weaker vertical eddy diffusivity, and reduced vertical extent of the mixing layer, which is bounded by hBD. Through most of the seasonal pycnocline, the vertical eddy diffusivity scales inversely with buoyancy frequency (K\"I \^a N\^a1). The presence of mobile sea ice alters the magnitude and vertical structure of turbulent mixing primarily through stronger and shallower stratification, and thus vertical eddy diffusivity is greatly reduced under sea ice. This study uses these results to develop a quantitative model of surface layer turbulent mixing during Arctic summer and discuss the impacts of a changing sea ice cover.},
   bdsk-url-2 = {http://dx.doi.org/10.1175/JPO-D-16-0200.1},
   eprint = {https://doi.org/10.1175/JPO-D-16-0200.1},
   journal = {Journal of Physical Oceanography},
@@ -186,14 +188,14 @@
   year = {2017},
   month = mar,
   publisher = {{UiT Norges arktiske universitet}},
-  address = {{Troms{\o}, Norway}},
+  address = {{Troms\o, Norway}},
   url = {http://hdl.handle.net/10037/10948},
   urldate = {2018-06-25},
   abstract = {Upward mixing of remineralized nutrients is essential for photosynthesis in the upper ocean. Weak vertical mixing, which restricts nutrient supply, and sea ice, which leads to low light levels, conspire to severely inhibit marine primary productivity in the Arctic Ocean. However, little has been known about their relative contributions. No large-scale quantitative estimates of the vertical nutrient supply had previously been presented, which has impeded an understanding of its role in shaping the ecology and carbon cycle of the Arctic Ocean.
-
-In order to estimate the vertical flux of nitrate into the surface layer in contrasting hydrographic and dynamic regimes, profiles of turbulent microstructure and nitrate concentrations were measured as part of a number of cruises and ice camps in the area extending from eastern Fram Strait into the Nansen Basin. These have been supplemented with obervations of the seasonal nutrient cycle at a mooring in the same area, and a reanalysis of available data on nitrate concentrations and turbulent mixing in other parts of the central Arctic Ocean.
-
-Hydrography was found to be the biggest driver of variability in nitrate fluxes. Strong stratification, wherever encountered, restricted nitrate supply, often in concert with concurrently weak turbulent mixing, both in the seasonal nitracline (0.3\textendash{}0.7 mmol N m-2 d-1) and the deep basin (0.01\textendash{}0.2 mmol N m-2 d-1). Thus deep winter mixing supplies the bulk of the nitrate pool on the relatively productive shelves (e.g. 2.5 mmol N m-2 d-1 in the inflow of Atlantic Water during winter), but in the strongly stratified Canadian Basin, fluxes are low year-round (on the order of 0.01 mmol N m-2 d-1) and place a tight limit on new production. Only the weakly stratified Atlantic derived water in the Nansen Basin close to Fram Strait seems to have a certain potential to support future increases in new production under a seasonal ice cover.},
+ 
+ In order to estimate the vertical flux of nitrate into the surface layer in contrasting hydrographic and dynamic regimes, profiles of turbulent microstructure and nitrate concentrations were measured as part of a number of cruises and ice camps in the area extending from eastern Fram Strait into the Nansen Basin. These have been supplemented with obervations of the seasonal nutrient cycle at a mooring in the same area, and a reanalysis of available data on nitrate concentrations and turbulent mixing in other parts of the central Arctic Ocean.
+ 
+ Hydrography was found to be the biggest driver of variability in nitrate fluxes. Strong stratification, wherever encountered, restricted nitrate supply, often in concert with concurrently weak turbulent mixing, both in the seasonal nitracline (0.3\textendash 0.7 mmol N m-2 d-1) and the deep basin (0.01\textendash 0.2 mmol N m-2 d-1). Thus deep winter mixing supplies the bulk of the nitrate pool on the relatively productive shelves (e.g. 2.5 mmol N m-2 d-1 in the inflow of Atlantic Water during winter), but in the strongly stratified Canadian Basin, fluxes are low year-round (on the order of 0.01 mmol N m-2 d-1) and place a tight limit on new production. Only the weakly stratified Atlantic derived water in the Nansen Basin close to Fram Strait seems to have a certain potential to support future increases in new production under a seasonal ice cover.},
   isbn = {978-82-8236-253-5},
   language = {eng}
 }
@@ -207,7 +209,7 @@ Hydrography was found to be the biggest driver of variability in nitrate fluxes.
   doi = {10.3389/fmars.2018.00224},
   url = {https://www.frontiersin.org/articles/10.3389/fmars.2018.00224/full?\&utm_source=Email_to_authors_\&utm_medium=Email\&utm_content=T1_11.5e1_author\&utm_campaign=Email_publication\&field=\&journalName=Frontiers_in_Marine_Science\&id=377832},
   urldate = {2018-06-29},
-  abstract = {Eastern Fram Strait and the shelf slope region north of Svalbard is dominated by the advection of warm, salty and nutrient-rich Atlantic Water (AW). This oceanic heat contributes to keeping the area relatively free of ice. The last years have seen a dramatic decrease in regional sea ice extent, which is expected to drive large increases in pelagic primary production and thereby changes in marine ecology and nutrient cycling. In a concerted effort, we conducted five cruises to the area in winter, spring, summer and fall of 2014, in order to understand the physical and biogeochemical controls of carbon cycling, for the first time from a year-round point of view. We document (1) the offshore location of the wintertime front between salty AW and fresher Surface Water in the ocean surface, (2) thermal convection of Atlantic Water over the shelf slope, likely enhancing vertical {\~n}nutrient fluxes, and (3) the importance of ice melt derived upper ocean stratification for the spring bloom timing. Our findings strongly confirm the hypothesis that this ``Atlantification'', as it has been called, of the shelf slope area north of Svalbard resulting from the advection of AW alleviates both nutrient and light limitations at the same time, leading to increased pelagic primary productivity in this region.},
+  abstract = {Eastern Fram Strait and the shelf slope region north of Svalbard is dominated by the advection of warm, salty and nutrient-rich Atlantic Water (AW). This oceanic heat contributes to keeping the area relatively free of ice. The last years have seen a dramatic decrease in regional sea ice extent, which is expected to drive large increases in pelagic primary production and thereby changes in marine ecology and nutrient cycling. In a concerted effort, we conducted five cruises to the area in winter, spring, summer and fall of 2014, in order to understand the physical and biogeochemical controls of carbon cycling, for the first time from a year-round point of view. We document (1) the offshore location of the wintertime front between salty AW and fresher Surface Water in the ocean surface, (2) thermal convection of Atlantic Water over the shelf slope, likely enhancing vertical \~nnutrient fluxes, and (3) the importance of ice melt derived upper ocean stratification for the spring bloom timing. Our findings strongly confirm the hypothesis that this ``Atlantification'', as it has been called, of the shelf slope area north of Svalbard resulting from the advection of AW alleviates both nutrient and light limitations at the same time, leading to increased pelagic primary productivity in this region.},
   journal = {Frontiers in Marine Science},
   keywords = {Arctic Ocean,Atlantic water,Carbon,Convection,Hydrography,Nutrients,Shelf slope},
   language = {English}
@@ -254,6 +256,37 @@ Hydrography was found to be the biggest driver of variability in nitrate fluxes.
   number = {1}
 }
 
+@article{randelhoff2020arctic,
+  title = {Arctic Mid-Winter Phytoplankton Growth Revealed by Autonomous Profilers},
+  author = {Randelhoff, Achim and Lacour, L{\'e}o and Marec, Claudie and Leymarie, Edouard and Lagunas, Jos{\'e} and Xing, Xiaogang and Darnis, G{\'e}rald and Penkerc'h, Christophe and Sampei, Makoto and Fortier, Louis and D'Ortenzio, Fabrizio and Claustre, Herv{\'e} and Babin, Marcel},
+  year = {2020},
+  month = sep,
+  volume = {6},
+  pages = {eabc2678},
+  publisher = {{American Association for the Advancement of Science}},
+  issn = {2375-2548},
+  doi = {10.1126/sciadv.abc2678},
+  url = {https://advances.sciencemag.org/content/6/39/eabc2678},
+  urldate = {2020-09-25},
+  abstract = {It is widely believed that during winter and spring, Arctic marine phytoplankton cannot grow until sea ice and snow cover start melting and transmit sufficient irradiance, but there is little observational evidence for that paradigm. To explore the life of phytoplankton during and after the polar night, we used robotic ice-avoiding profiling floats to measure ocean optics and phytoplankton characteristics continuously through two annual cycles in Baffin Bay, an Arctic sea that is covered by ice for 7 months a year. We demonstrate that net phytoplankton growth occurred even under 100\% ice cover as early as February and that it resulted at least partly from photosynthesis. This highlights the adaptation of Arctic phytoplankton to extreme low-light conditions, which may be key to their survival before seeding the spring bloom. Despite polar night and thick sea ice, algae can grow in the wintertime Arctic Ocean. Despite polar night and thick sea ice, algae can grow in the wintertime Arctic Ocean.},
+  chapter = {Research Article},
+  journal = {Science Advances},
+  language = {en},
+  number = {39}
+}
+
+@misc{randelhoff2020code,
+  title = {Code, Data, and Supplementary Information for: "{{Arctic}} Mid-Winter Phytoplankton Growth Revealed by Autonomous Profilers"},
+  author = {Randelhoff, Achim},
+  year = {2020},
+  publisher = {{Zenodo}},
+  doi = {10.5281/ZENODO.3945046},
+  url = {https://zenodo.org/record/3945046},
+  urldate = {2020-09-25},
+  abstract = {This git repository represents the complete, reproducible workflow for the article "Arctic mid-winter phytoplankton growth revealed by autonomous profilers" by Achim Randelhoff, L\'eo Lacour, Claudie Marec, Edouard Leymarie, Jos\'e Lagunas, Xiaogang Xing, G\'erald Darnis, Christophe Penkerc'h, Makoto Sampei, Louis Fortier, Fabrizio D'Ortenzio, Herv\'e Claustre, and Marcel Babin, published in Science Advances ({$<$}strong{$>$}6{$<$}/strong{$>$}, eabc2678) in 2020. It is also hosted at https://gitlab.com/achimr/winter-phytoplankton-growth. The GNU GPL v.3 license explicitly only pertains to the code contained in this repository; data are included for convenience but are subject to their respective licenses.},
+  keywords = {Arctic,Argo,autonomous,float,ocean,phytoplankton}
+}
+
 @article{randelhoff2020panarctic,
   title = {Pan-{{Arctic Ocean Primary Production Constrained}} by {{Turbulent Nitrate Fluxes}}},
   author = {Randelhoff, Achim and Holding, Johnna and Janout, Markus and Sejr, Mikael Kristian and Babin, Marcel and Tremblay, Jean-{\'E}ric and Alkire, Matthew B.},
@@ -276,7 +309,7 @@ Hydrography was found to be the biggest driver of variability in nitrate fluxes.
   year = {2020},
   publisher = {{Zenodo}},
   doi = {10.5281/zenodo.3712287},
-  url = {https://github.com/poplarShift/arctic-nitrate-fluxes},
+  url = {https://zenodo.org/badge/latestdoi/20325142},
 }
 
 
